<resources>
    <string name="app_name">M A S K</string>
    <string name="app_slogan">M A S K\nManagement Assistant of Studying Korean</string>
    <string name="app_sub_name">MA! Speak Korean!</string>

    <string name="btn_login">Login With Google</string>
    <string name="btn_go">GO</string>
    <string name="btn_myLibrary">My Library</string>
    <string name="btn_logout">Logout</string>

    <string name="example_myLibrary">안녕하세요, 저는 허승회 입니다.</string>
    <string name="example_user_name">허승회</string>
    <string name="example_user_email">hsh98@gmail.com</string>

    <string name="msg_correct">Correct :)</string>
    <string name="msg_wrong">Try Again !</string>

    <string name="test_page">1 / 10</string>

    <string name="TODO">avoid warnings</string>
</resources>